--- a/assets/style.css
+++ b/assets/style.css
@@ -41,4 +41,37 @@ body{
 .task-head{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
+    height: 12vh;
+    margin: 3vh 2vw;
+    background: rgb(124, 122, 122,0.5);
+    font-size: 1.3rem;
+
+}
+.task-form{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    flex-wrap: nowrap;
+}
+#task-text{
+    width: 18vw;
+    height: 5vh;
+    outline: none;
+    border-radius: 5px;
+}
+.addTaskBtn{
+    width: 6vw;
+    height: 4vh;
+}
+.task{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 10vh;
+    margin: 1vh 2vw;
+    background: rgba(230, 227, 227, 0.5);
+    font-size: 1.2rem;
+
 }
